# ConSys

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: _battery_report_8h_source.html  _fan_controller_8h.html  _fan_controller_8h.js  _fan_controller_8h_source.html  _hardware_monitor_8h.html  _hardware_monitor_8h.js  _hardware_monitor_8h_source.html  _power_manager_8h.html  _power_manager_8h_source.html  _process_manager_8h.html  _process_manager_8h.js  _process_manager_8h_source.html  annotated.html  annotated_dup.js  class_battery_report-members.html  class_battery_report.html  class_fan_controller-members.html  class_fan_controller.html  class_fan_controller.js  class_hardware_monitor-members.html  class_hardware_monitor.html  class_hardware_monitor.js  class_power_manager-members.html  class_power_manager.html  class_power_manager.js  class_process_manager-members.html  class_process_manager.html  class_process_manager.js  classes.html  dir_4cd4c13d01dc4f9c94211f072e8c6dd9.html  dir_4cd4c13d01dc4f9c94211f072e8c6dd9.js  dir_c6310732a22f63c0c2fc5595561e68f1.html  dir_c6310732a22f63c0c2fc5595561e68f1.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  (+19 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js
docs/latex/: _battery_report_8h_source.tex  _fan_controller_8h.tex  _fan_controller_8h_source.tex  _hardware_monitor_8h.tex  _hardware_monitor_8h_source.tex  _power_manager_8h.tex  _power_manager_8h_source.tex  _process_manager_8h.tex  _process_manager_8h_source.tex  annotated.tex  class_battery_report.tex  class_fan_controller.tex  class_hardware_monitor.tex  class_power_manager.tex  class_process_manager.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dirs.tex  files.tex  refman.tex  ryzenadj_8h_source.tex  struct_fan_command_packet.tex  struct_process_info.tex  struct_sensor_query_packet.tex  struct_sensor_response_packet.tex
include/: FanController.h  HardwareMonitor.h  PowerManager.h  ProcessManager.h
src/: FanController.cpp  HardwareMonitor.cpp  PowerManager.cpp  ProcessManager.cpp
tests/: ConSys_tests.cpp
ui/: ConSysGUI.rc  consysgui.cpp  consysgui.h  consysgui.qrc  consysgui.ui  main.cpp
